add test html pages and their respective views

--- a/virtual_environment/dolalash_website/members/templates/products.html
+++ b/virtual_environment/dolalash_website/members/templates/products.html
@@ -7,7 +7,13 @@
     <title>Head</title>
 </head>
 <body>
-    <h1>Testing</h1>
-    <p>Testing</p>
+    <h1>Products Page</h1>
+
+    <a href="/">home</a></br>
+    <a href="/products">products</a></br>
+    <a href="/services">services</a></br>
+    <a href="/profile">profile</a></br>
+    <a href="/about">about</a></br>
+
 </body>
 </html>
