fix line break tag

--- a/virtual_environment/dolalash_website/members/templates/profile.html
+++ b/virtual_environment/dolalash_website/members/templates/profile.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Profile Page</h1>
     
-    <a href="/">home</a></br>
-    <a href="/products">products</a></br>
-    <a href="/services">services</a></br>
-    <a href="/profile">profile</a></br>
-    <a href="/about">about</a></br>
+    <a href="/">home</a><br>
+    <a href="/products">products</a><br>
+    <a href="/services">services</a><br>
+    <a href="/profile">profile</a><br>
+    <a href="/about">about</a><br>
 
 
 </body>
