--- a/virtual_environment/dolalash_website/members/templates/about.html
+++ b/virtual_environment/dolalash_website/members/templates/about.html
@@ -14,6 +14,7 @@
     <a href="/services">services</a><br>
     <a href="/profile">profile</a><br>
     <a href="/about">about</a><br>
+    <a href="/register">register account</a><br>
 
 </body>
 </html>
