--- a/virtual_environment/dolalash_website/members/templates/login.html
+++ b/virtual_environment/dolalash_website/members/templates/login.html
@@ -7,7 +7,7 @@
     <title>Head</title>
 </head>
 <body>
-    <h1>Register</h1>
+    <h1>Login</h1>
   
     <a href="/">home</a><br>
     <a href="/products">products</a><br>
@@ -15,6 +15,7 @@
     <a href="/profile">profile</a><br>
     <a href="/about">about</a><br>
     <a href="/register">register account</a><br>
+    <a href="/login">register account</a><br>
 
     <br>
     
