--- a/virtual_environment/dolalash_website/members/templates/login_fail.html
+++ b/virtual_environment/dolalash_website/members/templates/login_fail.html
@@ -7,8 +7,8 @@
     <title>Head</title>
 </head>
 <body>
-    <h1>Profile Page</h1>
-    
+    <h1>Login Failed :(</h1>
+  
     <a href="/">home</a><br>
     <a href="/products">products</a><br>
     <a href="/services">services</a><br>
@@ -16,6 +16,11 @@
     <a href="/about">about</a><br>
     <a href="/register">register account</a><br>
     <a href="/login">login</a><br>
+
+    <br>
+    
+    <p>Username or password is incorrect</p>
+    <a href="/login">Try Again</a><br>
     
 </body>
 </html>
