--- a/virtual_environment/dolalash_website/members/templates/register.html
+++ b/virtual_environment/dolalash_website/members/templates/register.html
@@ -15,6 +15,7 @@
     <a href="/profile">profile</a><br>
     <a href="/about">about</a><br>
     <a href="/register">register account</a><br>
+    <a href="/login">login</a><br>
 
     <br>
     
