--- a/virtual_environment/dolalash_website/members/templates/register_fail.html
+++ b/virtual_environment/dolalash_website/members/templates/register_fail.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Registration Failed :(</h1>
-
+    <p>There is already an account associated with that email.</p>
     <a href="/register">Try again</a><br>
 
 </body>
