--- a/virtual_environment/dolalash_website/members/templates/register_success.html
+++ b/virtual_environment/dolalash_website/members/templates/register_success.html
@@ -10,6 +10,7 @@
     <h1>Registration Successful!</h1>
 
     <a href="/">Back to home</a><br>
+    <a href="/login">Login</a><br>
 
 </body>
 </html>
