--- a/virtual_environment/dolalash_website/members/templates/login_success.html
+++ b/virtual_environment/dolalash_website/members/templates/login_success.html
@@ -7,15 +7,17 @@
     <title>Head</title>
 </head>
 <body>
-    <h1>Profile Page</h1>
-    
+    <h1>Login Successful!</h1>
+  
     <a href="/">home</a><br>
     <a href="/products">products</a><br>
     <a href="/services">services</a><br>
     <a href="/profile">profile</a><br>
     <a href="/about">about</a><br>
     <a href="/register">register account</a><br>
-    <a href="/login">login</a><br>
+    <a href="/logout">log out</a><br>
+
+    <br>
     
 </body>
 </html>
