--- a/virtual_environment/dolalash_website/members/templates/services.html
+++ b/virtual_environment/dolalash_website/members/templates/services.html
@@ -9,13 +9,6 @@
 <body>
     <h1>Services Page</h1>
   
-    <a href="/">home</a><br>
-    <a href="/products">products</a><br>
-    <a href="/services">services</a><br>
-    <a href="/profile">profile</a><br>
-    <a href="/about">about</a><br>
-    <a href="/register">register account</a><br>
-    <a href="/login">login</a><br>
-
+    {% include "navbar.html" %}
 </body>
 </html>
