--- a/virtual_environment/dolalash_website/members/templates/login_fail.html
+++ b/virtual_environment/dolalash_website/members/templates/login_fail.html
@@ -9,14 +9,8 @@
 <body>
     <h1>Login Failed :(</h1>
   
-    <a href="/">home</a><br>
-    <a href="/products">products</a><br>
-    <a href="/services">services</a><br>
-    <a href="/profile">profile</a><br>
-    <a href="/about">about</a><br>
-    <a href="/register">register account</a><br>
-    <a href="/login">login</a><br>
-
+    {% include "navbar.html" %}
+    
     <br>
     
     <p>Username or password is incorrect</p>
