--- a/virtual_environment/dolalash_website/members/templates/profile.html
+++ b/virtual_environment/dolalash_website/members/templates/profile.html
@@ -9,13 +9,18 @@
 <body>
     <h1>Profile Page</h1>
     
-    <a href="/">home</a><br>
-    <a href="/products">products</a><br>
-    <a href="/services">services</a><br>
-    <a href="/profile">profile</a><br>
-    <a href="/about">about</a><br>
-    <a href="/register">register account</a><br>
-    <a href="/login">login</a><br>
+    {% include "navbar.html" %}
+    
+    {% if is_logged_in %}
+      <p>
+        <b>Name: </b>{{ full_name }}<br>
+        <b>Email: </b>{{ email }}<br>
+        <b>Mobile Number: </b>{{ phone }}<br>
+        <b>Username: </b>{{ username }}<br>
+      </p>
+    {% else %}
+      <h2>You are not logged in.</h2>
+    {% endif %}
     
 </body>
 </html>
